# RobStride_12DoF_Humanoid_Locomotion

./: .gitignore  CMakeLists.txt  readme.md
config/: motors.yaml
include/: GridRobot.hpp  actuator.hpp  ankle_kinematics.hpp  config.hpp  databus.hpp  motor.hpp  router.hpp  rs_protocol.hpp  stats.hpp  usb2can_transport.hpp  util.hpp  witmotion_imu.hpp
logs/: track.csv
scripts/: plot.py
src/: GridRobot.cpp  ankle_kinematics.cpp  config.cpp  main.cpp  motor.cpp  motor_threads.cpp  router.cpp  stats.cpp  witmotion_imu.cpp
